--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ scikit-image==0.21.0
 scikit-learn==1.2.2
 scipy==1.10.1
 seaborn==0.12.2
-torch==1.11.0+cu113
-torchaudio==0.11.0+cu113
-torchvision==0.12.0+cu113
+torch==1.11.0
+torchaudio==0.11.0
+torchvision==0.12.0
 tqdm==4.65.0
 wandb==0.15.4
